--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - black=21.12b0
   - bokeh=2.4.2
   - bqplot=0.12.32
+  - contextily=1.1.0
   - coverage=6.2
   - cython=0.29.26
   - dask=2022.1.0
@@ -48,6 +49,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2
   - jupyterlab_widgets=1.0.2
   - jupytext=1.11.5
+  - lxml=4.6.3
   - mamba=0.19.1
   - markdown-it-py=1.1.0
   - markupsafe=2.0.1
